# ws_demo

./: .gitignore  README  configure.ac
src/: Makefile.am  demo.c  devices  driver.c  driver.h  http_handler.c  http_handler.h  jrpc_iface.c  jrpc_iface.h  log.c  log.h  util.c  util.h
src/web/: index.html
src/web/css/: app.css
src/web/css/ui-lightness/: jquery-ui-1.8.11.custom.css
src/web/js/: App.js  EBus.js  JsonRpc.js  UI.js  Util.js  jquery-strings-0.3.js  jquery-ui-1.8.11.custom.min.js
tests/: Makefile.am  check_demo.c  devices_test
tests/driver/: Makefile.am  check_driver.c  check_driver.h
tests/util/: Makefile.am  check_util.c  check_util.h
